# Helios

./: .gitignore  .pre-commit-config.yaml  README.md  batch.json  batch2.json  environment.yml  helios.ipynb  my_batch.json  pyproject.toml  target_spec.pt  target_spec_old.pt
configs/: evo.yaml  target_corpus.yaml  target_corpus_smoke.yaml
configs/evolution/: evo.yaml  (+2 more)
experiments/: kernelExperiments.ipynb  kernelExperiments.py  simulationExperiments.ipynb
generation/: README.md  __init__.py  generate_targets.py  inspect_target_corpus.ipynb  target_corpus.py
model/: __init__.py  base.py  cnn_mlp.py  components.py  config.py  registry.py  transformer.py
models/: reward.py
notebooks/: array_response_experiments.ipynb  simulationExperiments.ipynb
scripts/: README.md  antenna_gen.py  arrayBatch.py  arraySimulation.py  arraySpec.py  batchFactory.py  coordinateTransforms.py  phasedArray_old.py  plots.py  targetSpec.py  target_generation.py
simulation/: __init__.py  arraySim.py  arraySimV2.py  response.py  simulationExperiments.ipynb
tests/: test_antenna.py  test_array_simulation.py  test_objective_v2.py  test_ppo.py  test_target_corpus.py  test_training_refactor.py
train/: README.md  benchmark_chunk_shapes.py  benchmark_chunk_sweep.py  benchmark_evaluate.py  compare_objectives.py  config.py  evaluation_utils.py  evolve.py  nvtx.py  objective.py  objective_v2.py  persistence.py  ppo.py  profile_with_nsys.py  reward.py  run.py  runtime.py  target_corpus.py
ui/: README.md  __init__.py  export_batch.py  export_target.py  helios_bridge.py  index.html  server.py
(+29 files in other folders)
